--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FilmFlix</string>
+    <string name="popular_movies">Popular Movies</string>
+    <string name="favourite_movies">Favourite Movies</string>
+    <string name="search_movies">Search Movies</string>
 </resources>
